--- a/html/fixtures.html
+++ b/html/fixtures.html
@@ -55,35 +55,27 @@
     </nav>
 
     <!-- Main Content -->
-<!-- Preseason Fixtures Graphic -->
-<div style="text-align: center; padding: 80px 15px 0;">
-    <img src="../images/Preseason.png" alt="Brundall Bullfinches Preseason Fixtures" style="max-width: 90%; height: auto; margin-top: 20px;">
+
 </div>
 </div>
     <section class="main-content" style="margin-top: 100px; padding: 20px;">
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">Next Game</h2>
 
-        <!-- Full-Time API Embed (Upcoming Fixtures) -->
-        <div id="lrep810707086" style="width: 350px;">
-            Data loading....<a href="null">click here for null</a><br/><br/>
-            <a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a>
-        </div>
-        <script language="javascript" type="text/javascript">
-            var lrcode = '810707086';
-        </script>
-        <script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
+        <!-- Full-Time API Embed (Next Fixture) -->
+<div id="lrep197445570" style="width: 350px;">Data loading....<a href="null">click here for null</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
+<script language="javascript" type="text/javascript">
+var lrcode = '197445570'
+</script>
+<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script> 
 
         <h2 style="text-transform: uppercase; margin-top: 40px; margin-bottom: 20px;">Upcoming Fixtures</h2>
 
         <!-- Full-Time API Embed (Next Fixture) -->
-        <div id="lrep637888856" style="width: 350px;">
-            Data loading....<a href="null">click here for null</a><br/><br/>
-            <a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a>
-        </div>
-        <script language="javascript" type="text/javascript">
-            var lrcode = '637888856';
-        </script>
-        <script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
+<div id="lrep889843423" style="width: 350px;">Data loading....<a href="null">click here for null</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
+<script language="javascript" type="text/javascript">
+var lrcode = '889843423'
+</script>
+<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script> 
     </section>
 
     <!-- Footer Section -->
