--- a/html/results.html
+++ b/html/results.html
@@ -79,14 +79,11 @@
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">Recent Results</h2>
 
         <!-- Full-Time API Embed for Recent Results -->
-        <div id="lrep718126433" style="width: 350px;">
-            Data loading....<a href="null">click here for null</a><br/><br/>
-            <a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a>
-        </div>
-        <script language="javascript" type="text/javascript">
-            var lrcode = '718126433';
-        </script>
-        <script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
+<div id="lrep459841657" style="width: 350px;">Data loading....<a href="null">click here for null</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
+<script language="javascript" type="text/javascript">
+var lrcode = '459841657'
+</script>
+<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script> 
     </section>
 
     <!-- Footer Section -->
