--- a/html/table.html
+++ b/html/table.html
@@ -153,15 +153,11 @@
         </a>
 
         <!-- Full-Time API Embed for Recent Results -->
-        <div id="lrep305155944" style="width: 350px;">
-            Data loading....<br/>
-            <a href="https://fulltime.thefa.com/index.html?divisionseason=335423930" target="_blank">click here for The River Garden Division 4</a><br/><br/>
-            <a href="http://www.thefa.com/FULL-TIME" target="_blank">FULL-TIME Home</a>
-        </div>
-        <script language="javascript" type="text/javascript">
-            var lrcode = '305155944';
-        </script>
-        <script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
+       <div id="lrep330373380" style="width: 350px;">Data loading....<a href="https://fulltime.thefa.com/index.html?divisionseason=864421863">click here for The Wensum Print Division 2</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
+<script language="javascript" type="text/javascript">
+var lrcode = '330373380'
+</script>
+<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script> 
 
         <!-- Norfolk Sunday League Logo with Link -->
         <a href="https://norfolksundayleague.co.uk" target="_blank">
