--- a/html/table.html
+++ b/html/table.html
@@ -145,7 +145,7 @@
         <!-- Tables -->
 				
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">Norfolk Sunday League</h2>
-        <h2 style="text-transform: uppercase; margin-bottom: 20px;">River Garden Division 4</h2>
+        <h2 style="text-transform: uppercase; margin-bottom: 20px;">Wensum Print Division 2</h2>
 
         <!-- Full-Time API Embed for Recent Results -->
        <div id="lrep423357205" style="width: 350px;">Data loading....<a href="https://fulltime.thefa.com/index.html?divisionseason=864421863">click here for The Wensum Print Division 2</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
