--- a/html/table.html
+++ b/html/table.html
@@ -148,11 +148,16 @@
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">Wensum Print Division 2</h2>
 
         <!-- Full-Time API Embed for Recent Results -->
-<div id="lrep893683364" style="width: 350px;">Data loading....<a href="https://fulltime.thefa.com/index.html?divisionseason=864421863">click here for The Wensum Print Division 2</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
-<script language="javascript" type="text/javascript">
-var lrcode = '893683364'
-</script>
-<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script> 
+<style>
+  #lrep179400058 a {
+    color: black !important;   /* makes the links black */
+    text-decoration: none;     /* optional: removes underline */
+  }
+
+  #lrep179400058 a:hover {
+    color: darkblue !important; /* optional hover colour */
+  }
+</style>
 
         <!-- Norfolk Sunday League Logo with Link -->
         <a href="https://norfolksundayleague.co.uk" target="_blank">
