--- a/html/table.html
+++ b/html/table.html
@@ -164,6 +164,8 @@
             <img src="../images/nsl.webp" alt="Norfolk Sunday League" class="nsl-logo" style="margin-top: 40px;"> <!-- Added margin-top to create space -->
         </a>
     </section>
+    
+    <script src="https://fulltime.thefa.com/client/api/cs1.js"></script>
 
     <!-- Footer Section -->
     <footer class="footer" style="color: white; text-align: center; padding: 20px;">
