--- a/html/results.html
+++ b/html/results.html
@@ -128,7 +128,7 @@ var lrcode = '459841657'
         }
     </script>
 
-    <!-- External JavaScript for Cookie Banner -->
+    <!--_€€\\€ External JavaScript for Cookie Banner -->
     <script src="../js/cookiebanner.js"></script> <!-- Reference to external JS file -->
 </body>
 
