--- a/html/table.html
+++ b/html/table.html
@@ -79,11 +79,15 @@
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">Recent Results</h2>
 
         <!-- Full-Time API Embed for Recent Results -->
-<div id="lrep203627413" style="width: 350px;">Data loading....<a href="null">click here for null</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
-<script language="javascript" type="text/javascript">
-var lrcode = '203627413'
+<div id="lrep250168607" style="width: 350px;">
+  Data loading....
+  <a href="null">click here for null</a><br/><br/>
+  <a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a>
+</div>
+<script>
+  var lrcode = '250168607'
 </script>
-<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
+<script src="https://fulltime.thefa.com/client/api/cs1.js"></script>
     </section>
 
     <!-- Footer Section -->
