--- a/html/table.html
+++ b/html/table.html
@@ -147,13 +147,8 @@
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">Norfolk Sunday League</h2>
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">River Garden Division 4</h2>
 
-        <!-- River Garden Logo with Link -->
-        <a href="https://www.therivergardennorwich.com" target="_blank">
-            <img src="../images/rivergarden.jpeg" alt="River Garden" class="rivergarden-logo">
-        </a>
-
-        <!-- Full-Time API Embed for Recent Results -->
-        <div id="lrep305155944" style="width: 350px;">
+        <!-- Full-Time API Embed for Wensum Print Div 2 Table -->
+        <div id="lrep317388677" style="width: 350px;">
             Data loading....<br/>
             <a href="https://fulltime.thefa.com/index.html?divisionseason=335423930" target="_blank">click here for The River Garden Division 4</a><br/><br/>
             <a href="http://www.thefa.com/FULL-TIME" target="_blank">FULL-TIME Home</a>
