--- a/html/table.html
+++ b/html/table.html
@@ -148,15 +148,11 @@
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">River Garden Division 4</h2>
 
         <!-- Full-Time API Embed for Wensum Print Div 2 Table -->
-        <div id="lrep317388677" style="width: 350px;">
-            Data loading....<br/>
-            <a href="https://fulltime.thefa.com/index.html?divisionseason=335423930" target="_blank">click here for The River Garden Division 4</a><br/><br/>
-            <a href="http://www.thefa.com/FULL-TIME" target="_blank">FULL-TIME Home</a>
-        </div>
-        <script language="javascript" type="text/javascript">
-            var lrcode = '305155944';
-        </script>
-        <script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
+        <div id="lrep317388677" style="width: 350px;">Data loading....<a href="null">click here for null</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
+<script language="javascript" type="text/javascript">
+var lrcode = '317388677'
+</script>
+<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
 
         <!-- Norfolk Sunday League Logo with Link -->
         <a href="https://norfolksundayleague.co.uk" target="_blank">
