--- a/html/table.html
+++ b/html/table.html
@@ -145,7 +145,7 @@
         <!-- Tables -->
 				
         <h2 style="text-transform: uppercase; margin-bottom: 20px;">Norfolk Sunday League</h2>
-        <h2 style="text-transform: uppercase; margin-bottom: 20px;">River Garden Division 4</h2>
+        <h2 style="text-transform: uppercase; margin-bottom: 20px;">The Wensum Print Division 2</h2>
 
         <!-- Full-Time API Embed for Wensum Print Div 2 Table -->
         <div id="lrep317388677" style="width: 350px;">Data loading....<a href="null">click here for null</a><br/><br/><a href="http://www.thefa.com/FULL-TIME">FULL-TIME Home</a></div>
