--- a/html/news.html
+++ b/html/news.html
@@ -65,14 +65,14 @@
 			
 			<!-- First Article -->
         <article class="news-item" style="background-color: #333; color: white; padding: 20px; border-radius: 8px; border: 2px solid black;">
-            <h2 style="font-size: 24px; margin-bottom: 10px;">Brundall Bullfinches 2025/2026 Preseason Underway</h2>
-            <p class="news-date" style="margin-bottom: 20px;">June 29th, 2025</p>
-            <img src="../images/Preseason.png" alt="Defibrillator" style="width: 100%; height: auto; max-width: 100%; margin-bottom: 20px;">
+            <h2 style="font-size: 24px; margin-bottom: 10px;">Brundall Claim 3 Points In League Opener</h2>
+            <p class="news-date" style="margin-bottom: 20px;">Sept 7th, 2025</p>
+            <img src="../images/BBFCDickleburghResult.png" alt="Defibrillator" style="width: 100%; height: auto; max-width: 100%; margin-bottom: 20px;">
             <p style="margin-bottom: 20px; text-align: justify;">
-We are excited to announce that out preseason is officially starting. We have fixtures coming thick and fast. The next few as displayed in the graphic above. Keep an eye in our socials for fixtues further down the lone, as we have one almost every weekend up until the season starts in September...
+In an exhilarating Norfolk Sunday League season opener, Brundall Bullfinches edged out Dickleburgh with a 3–2 victory at Thorpe St Andrew School on Sunday, 7th September...
             </p>
             <!-- Read More Button -->
-            <a href="../newspageshtml/bullfinches2025preseason.html" class="read-more-button" style="display: inline-block; padding: 10px 20px; background-color: #2a5d84; color: white; text-decoration: none; border-radius: 5px; margin-top: 20px;">
+            <a href="../newspageshtml/bullfinchesbeatdickleburghinleagueopener.html.html" class="read-more-button" style="display: inline-block; padding: 10px 20px; background-color: #2a5d84; color: white; text-decoration: none; border-radius: 5px; margin-top: 20px;">
                 Read More
             </a>
         </article>
